--- a/kurs/public/index.html
+++ b/kurs/public/index.html
@@ -15,7 +15,7 @@ content="Тестовое приложение на базе React JS"
 />
 <meta name="viewport" content="initial-scale=1, width=device-width" />
 <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-<title>Лаболаторная работа №4</title>
+<title>Курсовой проект по дисциплине "Проектирование UI" Денисюк А.В.</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
